Fix overflow of headers caused by status icons

--- a/packages/office-ui-fabric-react/src/components/DetailsList/DetailsHeader.scss
+++ b/packages/office-ui-fabric-react/src/components/DetailsList/DetailsHeader.scss
@@ -161,14 +161,21 @@ $isPaddedMargin: 24px;
 }
 
 .cellTitle {
-  display: block;
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: stretch;
+  box-sizing: border-box;
   overflow: hidden;
-  @include focus-border($position: absolute);
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
+  max-width: 100%;
+  @include focus-border($position: auto);
   padding: 0 8px;
+}
+
+.cellName {
+  flex: 1 1 auto;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 :global(.ms-TooltipHost).checkTooltip {
